Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-135647

WebEngine fatal error in XWayland at startup -> GLX: Failed to find frame buffer configuration.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • 6.9.1, 6.10.0 FF
    • 6.9
    • WebEngine

      I am using Arch Linux with the current Qt6.9.0 (and an Nvidia GPU.)

      Tested in both KDE/Wayland and GNOME/Wayland.

      Any WebEngine apps will crash at startup when choosing to use XWayland.

      For example, falkon

      > QT_QPA_PLATFORM=xcb falkon
      GBM is not supported with the current configuration. Fallback to Vulkan rendering in Chromium.
      Fatal: GLX: Failed to find frame buffer configuration.
      fish: Job 1, 'QT_QPA_PLATFORM=xcb falkon' terminated by signal SIGABRT (Abort)
      

      I am maintaining an app that currently requires XWayland, and we received a few reports.

        For Gerrit Dashboard: QTBUG-135647
        # Subject Branch Project Status CR V

            pvarga Peter Varga
            shenlebantongying shenleban tongying
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes