Do not list GLX frame buffer configurations unnecessarily

List it on demand instead of in constructor. It is not used if
dma-buf/GBM/NativePixmap is disabled.

This fixes fatal error when glXChooseFBConfig() fails to return
configuration in XWayland with Nvidia driver.

Fixes: QTBUG-135647
Change-Id: Iab10f6f0cdff54732a2dee8d201f1e3b14146b0e
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>
Reviewed-by: Moss Heim <moss.heim@qt.io>
(cherry picked from commit 23cb28fa0c21c3205b398eb177dffada62de6cc9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>